--- a/package.json
+++ b/package.json
@@ -20,10 +20,14 @@
   },
   "dependencies": {
     "es-module-shims": "^1.6.2",
-    "mathjs": "^11.3.2",
+    "mathjs": "^11.4.0",
     "mathquill": "^0.10.1-a",
     "peggy": "^2.0.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tex-math-parser": "^2.0.3"
+  },
+  "devDependencies": {
+    "eslint": "^8.27.0"
   }
 }
